// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test med saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="panel oversiktspanel dittnav-lenkepanel-stor panel--border"
  >
    <div
      className="oversiktspanel__header"
    >
      <div
        className="oversiktspanel__overskrift"
      >
        <h2
          className="typo-systemtittel"
        >
          <span>
            Dine siste saker
          </span>
        </h2>
      </div>
      <div>
        <a
          className="lenke oversiktspanel__header-lenke"
          href="http://localhost:9222/saksoversikt/"
          id="dekorator-bottomborder-overstyring"
        >
          <p
            className="typo-normal"
          >
            <span>
              Se alle dine saker (6)
            </span>
            <i
              className="nav-frontend-chevron chevronboks chevron--hoyre"
              id="oversiktspanel__chevron"
            />
          </p>
        </a>
      </div>
    </div>
    <div>
      <hr />
    </div>
    <div
      className="oversiktspanel__liste"
    >
      <div
        className="sak-container"
      >
        <a
          className="lenke sak-lenke"
          href="http://localhost:9222/saksoversikt/tema/BAR"
          id="dekorator-bottomborder-overstyring"
        >
          <div
            className="sak-temanavn"
          >
            <h2
              className="typo-undertittel"
            >
              Barnetrygd
            </h2>
            <i
              className="nav-frontend-chevron chevronboks sak-chevron chevron--hoyre"
            />
          </div>
          <div
            className="sak-status"
          >
            <p
              className="typo-undertekst"
            >
              <span>
                Sist oppdatert: 
              </span>
              <span>
                2019 M08 15
              </span>
            </p>
          </div>
        </a>
      </div>
      <div
        className="sak-container"
      >
        <a
          className="lenke sak-lenke"
          href="http://localhost:9222/saksoversikt/tema/SYK"
          id="dekorator-bottomborder-overstyring"
        >
          <div
            className="sak-temanavn"
          >
            <h2
              className="typo-undertittel"
            >
              Sykepenger og oppfølging
            </h2>
            <i
              className="nav-frontend-chevron chevronboks sak-chevron chevron--hoyre"
            />
          </div>
          <div
            className="sak-status"
          >
            <p
              className="typo-undertekst"
            >
              <span>
                Du har ti søknader under behandling. 
              </span>
              <span>
                Sist oppdatert: 
              </span>
              <span>
                2019 M08 14
              </span>
            </p>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="dittnav-lenkepanel-liten"
    id="cols-layout"
  >
    <a
      alt="Utbetalinger"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt/"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Dine utbetalinger
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Innboks"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/mininnboks/"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Innboks
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;

exports[`Snapshot test uten saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="dittnav-lenkepanel-liten"
    id={null}
  >
    <a
      alt="Dine saker"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/saksoversikt/"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Dine saker
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Utbetalinger"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt/"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Dine utbetalinger
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Innboks"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/mininnboks/"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Innboks
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;
